<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServiceActivity"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@drawable/wallpaper">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/service_dashboard_linear_v"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:orientation="vertical"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/nestedScrollView"
            app:layout_constraintEnd_toEndOf="@+id/nestedScrollView"
            app:layout_constraintStart_toStartOf="@+id/nestedScrollView"
            app:layout_constraintTop_toTopOf="@+id/nestedScrollView">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:textColor="#FFFFFF"
                app:popupTheme="@style/AppTheme.NoActionBar"
                app:titleTextColor="#FFFFFF" />


            <ImageView
                android:id="@+id/dashboard_logo"
                android:layout_width="268dp"
                android:layout_height="74dp"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="100dp"
                android:layout_marginRight="100dp"
                android:layout_marginBottom="30dp"
                android:contentDescription="@string/servicesdashboard"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/dashboard_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_CovidTracker"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="160dp"
                    android:layout_height="150dp"
                    android:layout_gravity="left"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/custom_buttons"
                    android:text="@string/covidTracker"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="18dp"
                    tools:ignore="RtlHardcoded" />

                <Button
                    android:id="@+id/btn_ContactTracing"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="160dp"
                    android:layout_height="150dp"
                    android:layout_gravity="right"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/custom_buttons"
                    android:foregroundGravity="center"
                    android:text="@string/contactTracer"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="18dp"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="60dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_CovidUpdates"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="160dp"
                    android:layout_height="150dp"
                    android:layout_gravity="left"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/custom_buttons"
                    android:text="@string/covidUpdates"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    tools:ignore="RtlHardcoded"
                    android:textSize="18dp" />

                <Button
                    android:id="@+id/btn_Services"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="160dp"
                    android:layout_height="150dp"
                    android:layout_gravity="right"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/custom_buttons"
                    android:foregroundGravity="center"
                    android:text="@string/services"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="18dp"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>