<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServiceActivity"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@drawable/wallpaper">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/service_dashboard_linear_v"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:orientation="vertical"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/nestedScrollView"
            app:layout_constraintEnd_toEndOf="@+id/nestedScrollView"
            app:layout_constraintStart_toStartOf="@+id/nestedScrollView"
            app:layout_constraintTop_toTopOf="@+id/nestedScrollView">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:textColor="#FFFFFF"
                app:popupTheme="@style/AppTheme.NoActionBar"
                app:titleTextColor="#FFFFFF" />


            <ImageView
                android:id="@+id/servicesdashboard"
                android:layout_width="270dp"
                android:layout_height="75dp"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="100dp"
                android:layout_marginRight="100dp"
                android:layout_marginBottom="30dp"
                android:contentDescription="@string/servicesdashboard"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/servicesdashboard" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_hospitals"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="160dp"
                    android:layout_height="150dp"
                    android:layout_gravity="left"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/custom_buttons"
                    android:text="@string/hospitals"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="18dp"
                    tools:ignore="RtlHardcoded" />

                <Button
                    android:id="@+id/btn_selfTesting"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="160dp"
                    android:layout_height="150dp"
                    android:layout_gravity="right"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/custom_buttons"
                    android:foregroundGravity="center"
                    android:text="@string/selfTest"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="18dp"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_testingCenters"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="160dp"
                    android:layout_height="150dp"
                    android:layout_gravity="left"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/custom_buttons"
                    android:text="@string/testingCenters"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="18dp"
                    tools:ignore="RtlHardcoded" />

                <Button
                    android:id="@+id/btn_covConnect"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="160dp"
                    android:layout_height="150dp"
                    android:layout_gravity="right"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/custom_buttons"
                    android:foregroundGravity="center"
                    android:text="@string/covidConn"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="18dp"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="411dp"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/wallpaper"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/bottom_nav_menu" />


</androidx.constraintlayout.widget.ConstraintLayout>